[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/Fragment.gd" type="Script" id=1]
[ext_resource path="res://Assets/Songs/Sound of game coins - RiximaX Sound Effects HD (256).mp3" type="AudioStream" id=2]

[sub_resource type="RectangleShape2D" id=1]

[node name="Fragment" type="Area2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -10.0
margin_top = -10.0
margin_right = 10.0
margin_bottom = 10.0
color = Color( 0.0431373, 0.101961, 0.54902, 1 )

[node name="PickupSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )
max_distance = 9.22337e+18

[node name="TimerQueue" type="Timer" parent="."]
wait_time = 0.5

[connection signal="body_entered" from="." to="." method="_on_Fragmento_body_entered"]
[connection signal="finished" from="PickupSound" to="." method="_on_PickupSound_finished"]
[connection signal="timeout" from="TimerQueue" to="." method="_on_TimerQueue_timeout"]
